NATTQA-ENV/force-app/main/default/objects/NAC_WareHouseData__mdt/NAC_WareHouseData__mdt.object-meta.xml
<CustomObject>
    <description>Custom meta data for NAC warehouse selection</description>
    <label>NAC_WareHouseData</label>
    <pluralLabel>NAC_WareHouseData</pluralLabel>
</CustomObject>