NATTQA-ENV/force-app/main/default/objects/NAC_WareHouseData__mdt/fields/API_VALUE__c.field-meta.xml
<CustomField>
    <fullName>API_VALUE__c</fullName>
    <label>API VALUE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>