NATTQA-ENV/force-app/main/default/objects/NAC_WareHouseData__mdt/fields/external_url__c.field-meta.xml
<CustomField>
    <fullName>external_url__c</fullName>
    <label>external url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>