NATTQA-ENV/force-app/main/default/objects/NAC_WareHouseData__mdt/fields/Help_Text_needed__c.field-meta.xml
<CustomField>
    <fullName>Help_Text_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to enable help text beside a country&apos;s warehouse selection option</description>
    <label>Help Text needed</label>
    <type>Checkbox</type>
</CustomField>