NATTQA-ENV/force-app/main/default/objects/NAC_WareHouseData__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>