NATTQA-ENV/force-app/main/default/objects/NAC_WareHouseData__mdt/fields/Redirection__c.field-meta.xml
<CustomField>
    <fullName>Redirection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redirection</label>
    <type>Checkbox</type>
</CustomField>