NATTQA-ENV/force-app/main/default/objects/NAC_WareHouseData__mdt/fields/sortorder__c.field-meta.xml
<CustomField>
    <fullName>sortorder__c</fullName>
    <label>sortorder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>