NATTQA-ENV/force-app/main/default/objects/NAC_WareHouseData__mdt/fields/Warehouse_Number__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Number__c</fullName>
    <label>Warehouse Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>